# jkpy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/.workflows/: manual-release.yml  release.yml
.github/workflows/: ci.yml  manual-release.yml  release.yml
src/jkpy/: __main__.py  _types.py  app_mvc.py  callbacks.py  cli.py  configHandler.py  configuration.py  jiraHandler.py  jiraRequest.py  jqlSetupHandler.py  main.py  metricHandler.py  prompt.py  prompt_mvc.py  requestHandler.py  resultsHandler.py  services.py  setupHandler.py  typer_types.py  types.py  updateDevHandler.py  userMappingHandler.py  utils.py
src/jkpy/handlers/: __init__.py  accounts_handler.py  aggregation_handler.py  base_handler.py  date_transformations_handler.py  excel_output_handler.py  filter.py  filter_handler.py  grouping_handler.py  handler.py  issues_handler.py  metrics.py  normalize.py  pre_filter_handler.py  preprocessing_date_handler.py  preprocessing_dev_labels_handler.py  preprocessing_team_labels_handler.py  primary_dev_filter.py  raw_data_filter.py  request_accounts.py  request_accounts_handler.py  request_issues.py  request_issues_handler.py  validate.py  validate_developer_handler.py  validate_primary_dev_handler.py  xyz-jqlSetupHandler.py  xyz-metricHandler.py  xyz-requestHandler.py  xyz-resultsHandler.py  xyz-userMappingHandler.py
src/jkpy/mvc/: input.py  menu.py  options.py
tests/utils/: test_ansi.py  test_back.py  test_date_time_encoder.py  test_edit_configurations.py  test_exit_application.py  test_progress_bar.py  test_run_application.py  test_setter_prompt.py  test_show_configurations.py
~/Desktop/jkpy/: 20260225_073727.xlsx  20260225_074410.xlsx
